Gemaakt met Colaboratory

--- a/2_2_assignment.ipynb
+++ b/2_2_assignment.ipynb
@@ -88,13 +88,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kva_9ycA0cfN",
-        "outputId": "b86aeff9-eb0a-4ac1-ff39-909ffaba830b"
+        "outputId": "1dc51124-da28-4424-a921-4b80a8221d9c"
       },
       "outputs": [
         {
@@ -108,9 +108,12 @@
       ],
       "source": [
         "def is_prime(num):\n",
-        "    for i in range(2, int((num**0.5)+1)):\n",
-        "        if num % i == 0:\n",
-        "            return False\n",
+        "    if num <= 1:\n",
+        "        return False\n",
+        "    else:\n",
+        "        for i in range(2, int((num**0.5)+1)):\n",
+        "            if num % i == 0:\n",
+        "                return False\n",
         "    return True\n",
         "\n",
         "print('Is 11 a prime?', is_prime(11))  # should be True\n",
@@ -132,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "p83RQvA40cfN",
         "colab": {
@@ -182,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
