Gemaakt met Colaboratory

--- a/3_1_assignment.ipynb
+++ b/3_1_assignment.ipynb
@@ -218,14 +218,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "p83RQvA40cfN",
         "tags": [
           "task_3"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a25f9fd5-c52d-48b1-d106-9b563b1b0341"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(5, 4, 3, 2, 1)\n"
+          ]
+        }
+      ],
       "source": [
         "a1 = (1, 2, 3, 4, 5)\n",
         "\n",
