--- a/3_2_assignment.ipynb
+++ b/3_2_assignment.ipynb
@@ -53,12 +53,12 @@
       "metadata": {
         "id": "oHqrVITz6Hy9"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "id": "IWVOCWxx0cfM",
         "tags": [
@@ -67,7 +67,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "83833642-7d5c-466e-e27f-376171d1cd01"
+        "outputId": "066bfae0-0feb-4e3a-8b52-ba1d8f84fa4d"
       },
       "outputs": [
         {
@@ -80,11 +80,11 @@
       ],
       "source": [
         "def find_primes(a, b):\n",
-        "    elements = []\n",
-        "    for i in range(a, b + 1):\n",
-        "        if is_prime(i) == True:\n",
-        "            elements.append(i)\n",
-        "    return elements\n",
+        "    primes = []\n",
+        "    for num in range(a, b + 1):\n",
+        "        if is_prime(num):\n",
+        "            primes.append(num)\n",
+        "    return primes\n",
         "\n",
         "print(find_primes(1, 11))  # should print [2, 3, 5, 7, 11]"
       ]
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "metadata": {
         "id": "kva_9ycA0cfN",
         "tags": [
@@ -111,7 +111,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "74af6e0a-8b30-4395-e70f-ae1cc8e61852"
+        "outputId": "d3c3c7ad-8590-4810-cfd2-5eb54aed971c"
       },
       "outputs": [
         {
@@ -124,8 +124,8 @@
       ],
       "source": [
         "def find_primes_2(a, b):\n",
-        "    elements = [i for i in range(a, b + 1) if is_prime(i) == True]\n",
-        "    return elements\n",
+        "    primes = [num for num in range(a, b + 1) if is_prime(num)]\n",
+        "    return primes\n",
         "\n",
         "print(find_primes_2(1, 11))  # should print [2, 3, 5, 7, 11]"
       ]
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "p83RQvA40cfN",
         "tags": [
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {
         "id": "VsoALrbBnsjs",
         "tags": [
@@ -195,7 +195,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "272d82c6-f054-4212-fbdc-f366459e918b"
+        "outputId": "e4a52f52-b502-490d-96d0-9f8b07c558b9"
       },
       "outputs": [
         {
@@ -207,16 +207,13 @@
         }
       ],
       "source": [
-        "def is_even(num):\n",
-        "    if num % 2 != 0:\n",
-        "        return 1\n",
-        "    return 0\n",
+        "def is_even(unsorted_list):\n",
+        "    unsorted_list.sort(key=lambda x: (x % 2, x))\n",
+        "    return unsorted_list\n",
         "\n",
         "unsorted_list = [1, 2, 3, 4, 5, 6, 7]\n",
         "\n",
-        "unsorted_list.sort(key = is_even)\n",
-        "\n",
-        "print(unsorted_list)  # should print [2, 4, 6, 1, 3, 5, 7] or any other valid sorting"
+        "print(is_even(unsorted_list))  # should print [2, 4, 6, 1, 3, 5, 7] or any other valid sorting"
       ]
     },
     {
@@ -238,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 2,
       "metadata": {
         "tags": [
           "task_5"
@@ -247,7 +244,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1bb5e46c-f445-4ec6-abaa-38eab39c04d2"
+        "outputId": "e67ded2f-75af-43f5-97c3-dab8e2ed9781"
       },
       "outputs": [
         {
@@ -274,15 +271,10 @@
         "print(\"+\" + \"-\" * len(terrain_map) + \"+\")\n",
         "\n",
         "def water_or_land(j):\n",
-        "    if j == 0:\n",
-        "        return \" \"\n",
-        "    if j == 1:\n",
-        "        return \"X\"\n",
+        "    return \" \" if j == 0 else \"X\"\n",
         "\n",
         "for i in terrain_map:\n",
-        "    str = \"\"\n",
-        "    for j in i:\n",
-        "        str += (water_or_land(j))\n",
+        "    str = \"\".join(water_or_land(cell) for cell in i)\n",
         "    print(\"|\" + str + \"|\")\n",
         "\n",
         "print(\"+\" + \"-\" * len(terrain_map) + \"+\")\n",
