Gemaakt met Colaboratory

--- a/5_1_assignment.ipynb
+++ b/5_1_assignment.ipynb
@@ -315,14 +315,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 34,
       "metadata": {
         "tags": [
           "task_7"
         ],
-        "id": "dGWzuDdwEvuw"
+        "id": "dGWzuDdwEvuw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f53ecf95-01c7-4d73-f52c-3b7e6ac9dcfd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[\n",
+            "    {\n",
+            "        \"product\": \"Apple\",\n",
+            "        \"price\": 0.5,\n",
+            "        \"quantity\": 10\n",
+            "    },\n",
+            "    {\n",
+            "        \"product\": \"Banana\",\n",
+            "        \"price\": 0.75,\n",
+            "        \"quantity\": 20\n",
+            "    },\n",
+            "    {\n",
+            "        \"product\": \"Orange\",\n",
+            "        \"price\": 0.35,\n",
+            "        \"quantity\": 15\n",
+            "    }\n",
+            "]\n"
+          ]
+        }
+      ],
       "source": [
         "import json\n",
         "\n",
@@ -333,7 +361,11 @@
         "]\n",
         "\n",
         "with open(\"warehouse_v3.json\", \"w\") as json_file:\n",
-        "    json.dump(warehouse, json_file, indent = 4)"
+        "    json.dump(warehouse, json_file)\n",
+        "\n",
+        "with open(\"warehouse_v3.json\", \"r\") as json_file:\n",
+        "    data = json.load(json_file)\n",
+        "    print(json.dumps(data, indent = 4))"
       ]
     }
   ],
